--- a/client/src/assets/Styles/Coursepage.css
+++ b/client/src/assets/Styles/Coursepage.css
@@ -8,7 +8,7 @@
     margin: 10px;
   }
 
-  .custom-btn {
+  .custom-btn  {
     background-color: #8B5F34;
     border-color: #8B5F34;
     font-weight: 600;
@@ -57,3 +57,17 @@
     margin-bottom: 1.5rem;
   }
   
+  .btn-create-course{
+    background-color: #8B5F34;
+    border-color: #8B5F34;
+    font-weight: 600;
+  }
+
+  .btn-create-course:hover {
+    background-color: #6f4f2f; /* Optional: Darker shade for hover effect */
+    border-color: #6f4f2f;
+  }
+
+ .background-card{
+   background-color: #dbdddf;
+ }
