--- a/client/src/assets/Styles/Course/Getcourse.css
+++ b/client/src/assets/Styles/Course/Getcourse.css
@@ -1,9 +1,3 @@
-.main-content {
-  margin-left: 250px; /* Adjust for Sidebar width */
-  margin-top: 114px; /* Adjust for Navbar height */
-  padding: 20px;
-}
-
 .space {
   margin: 10px;
 }
@@ -24,4 +18,33 @@
 
 .background-card {
   background-color: #dbdddf;
+}
+
+.icon-style {
+  cursor: pointer;
+  margin-right: 8px;
+}
+
+.actions-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.actions-cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.custom-btn  {
+  background-color: #8B5F34;
+  border-color: #8B5F34;
+  font-weight: 600;
+  
+}
+
+.custom-btn:hover {
+  background-color: #6f4f2f; /* Optional: Darker shade for hover effect */
+  border-color: #6f4f2f;
 }
