--- a/client/src/assets/Styles/Course/Getcourse.css
+++ b/client/src/assets/Styles/Course/Getcourse.css
@@ -33,8 +33,8 @@
 
 .actions-cell {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: start;
+  align-items: start;
 }
 
 .custom-btn  {
