--- a/client/src/assets/Styles/Settingcourse/Rubrictable.css
+++ b/client/src/assets/Styles/Settingcourse/Rubrictable.css
@@ -4,7 +4,12 @@
     justify-content: start;
     padding: 20px;
   }
-  
+  .score-container {
+    display: flex;
+    margin-left: 10px;
+    width: 30%;
+    
+  }
   .rubric-table {
     width: 100%;
     border-collapse: collapse;
@@ -22,7 +27,7 @@
     /* background-color: #f5f5f5; */
     align-items: start;
     justify-content: start;
-    width: 20%;
+    /* width: 20%; */
   }
   
   .criteria-cell,
@@ -38,13 +43,19 @@
   .rubric-input{
     width: 100%;
     border: none;
+    
     text-align: left;
   }
   .score-input {
-    width: 80px;
+    width: 100px;
     border: none;
     text-align: left;
     
+    
+  }
+  .pts-label{
+    font-weight: bold;
+  
   }
   .criteria-input:focus,
   .rubric-input:focus,
