--- a/client/src/assets/Styles/Assessment/Getassessment.css
+++ b/client/src/assets/Styles/Assessment/Getassessment.css
@@ -28,3 +28,8 @@
     display: inline-block; /* ให้แสดงผลเป็นบล็อกเล็ก */
   }
   
+
+  .table-hover tbody tr:hover {
+    background-color: #f5f5f5; /* Change this color to your desired hover color */
+    cursor: pointer;
+  }
