--- a/client/src/styles/Main.css
+++ b/client/src/styles/Main.css
@@ -1,5 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .main-content {
-    height: calc(100vh - 100px); /* Adjust the height as needed */
-    overflow-y: auto;
-    padding: 16px;
-  }
+  height: calc(100vh); /* Adjust the height as needed */
+  overflow-y: auto;
+  padding: 16px;
+}
+
+.main-content-feedback {
+  height: 100vh; /* Adjust the height as needed */
+  overflow-y: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 16px;
+  margin-top: 4rem;
+  padding-left: 0; /* Ensure content starts from the left */
+}
