--- a/client/src/assets/Styles/Viewassessment/Viewassessment.css
+++ b/client/src/assets/Styles/Viewassessment/Viewassessment.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: row;
     height: 100vh;
-    overflow: hidden;
 }
 
 .thumbnails-container {
@@ -16,11 +15,13 @@
 
 .pdf-viewer-container {
     flex: 1;
-    overflow-y: auto;
     position: relative;
 }
 
 .pdf-highlighter-container {
+    position: absolute; /* Ensure this is absolute */
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
