--- a/client/src/assets/Styles/Assessment/Getassessment.css
+++ b/client/src/assets/Styles/Assessment/Getassessment.css
@@ -57,3 +57,13 @@
 .sortable:hover svg {
   opacity: 1;
 }
+.custom-btn {
+  background-color: #8b5f34;
+  border-color: #8b5f34;
+  font-weight: 600;
+}
+
+.custom-btn:hover {
+  background-color: #6f4f2f; /* Optional: Darker shade for hover effect */
+  border-color: #6f4f2f;
+}
