--- a/client/src/styles/Modal.css
+++ b/client/src/styles/Modal.css
@@ -1,23 +1,21 @@
 .modal-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 450px;
-    background-color: #ffffff;
-    border-radius: 5px;
-    box-shadow: 24px;
-    padding: 24px;
-    text-align: left;
-    
-  }
-  .button-layout{
-    display: flex;
-    justify-content: flex-end;
-  }
-  .modal-button {
-    /* margin-top: 24px;
-    margin-left: auto;  */
-   
-  }
-  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 450px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 24px;
+  padding: 24px;
+  text-align: center; /* จัดข้อความและ Icon ให้อยู่ตรงกลาง */
+}
+
+.button-layout {
+  display: flex;
+  justify-content: center; /* ปุ่มอยู่ตรงกลาง */
+}
+
+.modal-box .text-center {
+  margin-bottom: 16px;
+}
